# EKNMusic

./: .gitignore  CREATE_PAUSE_BUTTON.md  INSTALLER_GUIDE.md  INSTALL_GUIDE.md  RADIO_API.md  RADIO_UI_500PX.md  README.md  RELEASE_NOTES.md  SONG_HISTORY_FIX.md  build_installer.bat  manga_styles.txt
.claude/: settings.local.json
app/: 1st_iteration.md  2nd_iteration.md
backend/: .env.example  .gitignore  README.md  requirements-dev.txt  requirements.txt
backend/docker/: Dockerfile  docker-compose.yml
client/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.bat  resources.qrc
client/docs/: ADDING_ANIME_ACE_FONT.md  CHANGELOG.md  CHANGELOG_LATEST.md  DEBUGGING_DRAG_DROP.md  FEATURES_SUMMARY.md  FIX_APP_ICON.md  PLAYLIST_PERSISTENCE.md  README.md  TABLE_DESIGN_SPOTIFY_STYLE.md
client/src/: main.cpp
client/src/config/: appconfig.cpp  appconfig.h
client/src/models/: playlistdata.cpp  playlistdata.h  track.cpp  track.h
client/src/services/: mediastatemanager.cpp  mediastatemanager.h  metadataextractor.cpp  metadataextractor.h  musicstorageservice.cpp  musicstorageservice.h  playerservice.cpp  playerservice.h  radioservice.cpp  radioservice.h
client/src/ui/: baseradiopage.cpp  baseradiopage.h  downloadedpage.cpp  downloadedpage.h  eknmintercomradiopage.cpp  eknmintercomradiopage.h  likedsongs.cpp  likedsongs.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h  playerpage.cpp  playerpage.h  playerwidget.cpp  playerwidget.h  radiopage.cpp  radiopage.h  searchpage.cpp  searchpage.h
docs/: INDEX.md  README.md  api-documentation.md  architecture.md  backend-setup.md  database-schema.md  deployment-guide.md  desktop-client.md  development-environment.md  iteration-1-spotify-clone.md
docs/bugfixes/: BUGFIX_RADIO_CRASH.md  MEDIA_STATE_UPDATE.md  RADIO_PLAY_BUTTON_FIX.md  RADIO_REDESIGN.md
docs/guides/: BUILD_INSTRUCTIONS.md
docs/radio-ui/: RADIO_BUTTONS_SVG.md  RADIO_UI_CLEAN.md  RADIO_UI_COMPACT.md  RADIO_UI_FINAL.md  RADIO_UI_NO_FLICKER.md  RADIO_UI_READABLE_COMPACT.md  RADIO_UI_RESIZE.md
installer/: README.md  setup.iss
